<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context="ru.topbun.selected_tour.SelectedTourFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/grey3"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_from"
                        style="@style/style_edit_text"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:hint="@string/from_moscow" />

                    <ImageButton
                        android:id="@+id/btn_swap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_swap"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"/>

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey5" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_to"
                        style="@style/style_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/to_turkey" />

                    <ImageButton
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_cancel"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"/>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_date_back"
                style="@style/style_chip_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:drawableStart="@drawable/ic_add"
                android:text="обратно"
                android:textColor="@color/white" />

            <Space
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_date_to"
                style="@style/style_chip_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textColor="@color/white"
                tools:text="24 фев, сб" />

            <Space
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/style_chip_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:drawableStart="@drawable/ic_person"
                android:drawableTint="@color/grey5"
                android:text="1,эконом"
                android:textColor="@color/white" />

            <Space
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/style_chip_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:drawableStart="@drawable/ic_filter"
                android:text="фильтры"
                android:textColor="@color/white" />

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_rounded_16"
        android:backgroundTint="@color/grey1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <TextView
            style="@style/title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/direct_flights"
            android:textColor="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_ticket" />

        <TextView
            style="@style/button_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:text="@string/show_all"
            android:textColor="@color/blue" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_show_all_tickets"
        style="@style/button_text_1"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_margin="16dp"
        android:text="@string/show_all_tickets"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/background_rounded_8"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/background_rounded_8"
        android:backgroundTint="@color/grey2"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_show_all_tickets">

        <TextView
            style="@style/text_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_notify"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="Подписка на цену"
            android:textColor="@color/white" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumbTint="@color/white"
            android:trackTint="@color/blue"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>